# boilerplate-cpp

./: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
apps/: CMakeLists.txt
apps/calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  calculator.m.cpp
include/myproject/Math/: Adder.h  Divider.h
scripts/: run_valgrind_on_tests.sh
src/: CMakeLists.txt
src/Math/: Adder.cpp  Adder.g.cpp  CMakeLists.txt  Divider.cpp  Divider.g.cpp
